WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183337
fast/loader/onload-policy-ignore-for-frame.html is timing out with async policy delegates
https://bugs.webkit.org/show_bug.cgi?id=183337
Summary
fast/loader/onload-policy-ignore-for-frame.html is timing out with async poli...
Chris Dumez
Reported
2018-03-05 10:14:22 PST
fast/loader/onload-policy-ignore-for-frame.html is timing out with async policy delegates.
Attachments
Patch
(4.68 KB, patch)
2018-03-05 15:30 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews114 for mac-sierra
(2.94 MB, application/zip)
2018-03-05 16:58 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews205 for win-future
(12.03 MB, application/zip)
2018-03-05 18:07 PST
,
EWS Watchlist
no flags
Details
Patch
(6.24 KB, patch)
2018-03-05 18:46 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-03-05 15:30:29 PST
Created
attachment 335036
[details]
Patch
EWS Watchlist
Comment 2
2018-03-05 16:58:44 PST
Comment on
attachment 335036
[details]
Patch
Attachment 335036
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/6817608
New failing tests: fast/loader/onload-policy-ignore-for-frame-async-delegates.html
EWS Watchlist
Comment 3
2018-03-05 16:58:46 PST
Created
attachment 335054
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-03-05 18:07:31 PST
Comment on
attachment 335036
[details]
Patch
Attachment 335036
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6818041
New failing tests: fast/loader/onload-policy-ignore-for-frame-async-delegates.html
EWS Watchlist
Comment 5
2018-03-05 18:07:42 PST
Created
attachment 335063
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Chris Dumez
Comment 6
2018-03-05 18:46:50 PST
Created
attachment 335066
[details]
Patch
WebKit Commit Bot
Comment 7
2018-03-05 19:13:37 PST
Comment on
attachment 335066
[details]
Patch Clearing flags on attachment: 335066 Committed
r229304
: <
https://trac.webkit.org/changeset/229304
>
WebKit Commit Bot
Comment 8
2018-03-05 19:13:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-03-05 19:15:18 PST
<
rdar://problem/38163809
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug