fast/loader/onload-policy-ignore-for-frame.html is timing out with async policy delegates https://bugs.webkit.org/show_bug.cgi?id=183337

Reviewed by Ryosuke Niwa.

Source/WebCore:

Make sure we call checkCompleted() before calling checkLoadComplete() in
FrameLoader::continueLoadAfterNavigationPolicy() when the client tells us
to ignore the navigation, so that we properly recognize that the load is
done. This matches what is already done in FrameLoader::receivedMainResourceError().

Test: fast/loader/onload-policy-ignore-for-frame-async-delegates.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueLoadAfterNavigationPolicy):

LayoutTests:

Add layout test coverage.

* fast/loader/onload-policy-ignore-for-frame-async-delegates-expected.txt: Added.
* fast/loader/onload-policy-ignore-for-frame-async-delegates.html: Added.


Canonical link: https://commits.webkit.org/199019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229304 268f45cc-cd09-0410-ab3c-d52691b4dbfc